[no ticket] fixed game over state break on tab switch; removed outline for game div on focus; fixed zoom in on mobile tap

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -174,6 +174,7 @@ body, html {
 .app .game > .right {
   display: table-cell;
   max-width: 767px;
+  outline: none;
 }
 
 .app .game > .left {
